--- a/core/res/assets/webkit/incognito_mode_start_page.html
+++ b/core/res/assets/webkit/incognito_mode_start_page.html
@@ -6,12 +6,12 @@
   <body>
     <p><strong>You've gone incognito</strong>. Pages you view in this window
       won't appear in your browser history or search history, and they won't
-      leave other traces, like cookies, on your computer after you close the
+      leave other traces, like cookies, on your device after you close the
       incognito window. Any files you download or bookmarks you create will be
       preserved, however.</p>
 
     <p><strong>Going incognito doesn't affect the behavior of other people,
-	servers, or software. Be wary of:</strong></p>
+      servers, or software. Be wary of:</strong></p>
 
     <ul>
       <li>Websites that collect or share information about you</li>
