--- a/core/java/android/hardware/camera2/package.html
+++ b/core/java/android/hardware/camera2/package.html
@@ -14,7 +14,7 @@
 -->
 <HTML>
 <BODY>
-<p>The android.hardware.photography package provides an interface to
+<p>The android.hardware.camera2 package provides an interface to
 individual camera devices connected to an Android device. It replaces
 the deprecated {@link android.hardware.Camera} class.</p>
 
@@ -28,18 +28,18 @@ having multiple requests in flight is required to maintain full
 framerate on most Android devices.</p>
 
 <p>To enumerate, query, and open available camera devices, obtain a
-{@link android.hardware.photography.CameraManager} instance.</p>
+{@link android.hardware.camera2.CameraManager} instance.</p>
 
-<p>Individual {@link android.hardware.photography.CameraDevice
+<p>Individual {@link android.hardware.camera2.CameraDevice
 CameraDevices} provide a set of static property information that
 describes the hardware device and the available settings and output
 parameters for the device. This information is provided through the
-{@link android.hardware.photography.CameraProperties} object.</p>
+{@link android.hardware.camera2.CameraProperties} object.</p>
 
 <p>To capture or stream images from a camera device, the application
 must first configure a set of output Surfaces for use with the camera
 device, with {@link
-android.hardware.photography.CameraDevice#configureOutputs}. Each
+android.hardware.camera2.CameraDevice#configureOutputs}. Each
 Surface has to be pre-configured with an appropriate size and format
 (if applicable) to match the sizes and formats available from the
 camera device. A target Surface can be obtained from a variety of
@@ -50,19 +50,19 @@ android.media.MediaCodec}, and {@link android.media.ImageReader}.
 </p>
 
 <p>The application then needs to construct a {@link
-android.hardware.photography.CaptureRequest}, which defines all the
+android.hardware.camera2.CaptureRequest}, which defines all the
 capture parameters needed by a camera device to capture a single
 image. The request also lists which of the configured output Surfaces
 should be used as targets for this capture. The CameraDevice has a
-{@link android.hardware.photography.CameraDevice#createCaptureRequest
+{@link android.hardware.camera2.CameraDevice#createCaptureRequest
 convenience factory method} for creating a request for a given use
 case which is optimized for the Android device the application is
 running on.</p>
 
 <p>Once the request has been set up, it can be handed to the
 CameraDevice either for a one-shot {@link
-android.hardware.photography.CameraDevice#capture} or for an endlessly
-{@link android.hardware.photography.CameraDevice#setRepeatingRequest
+android.hardware.camera2.CameraDevice#capture} or for an endlessly
+{@link android.hardware.camera2.CameraDevice#setRepeatingRequest
 repeating} use. Both methods also accept a list of requests to use as
 a burst capture / repeating burst. Repeating requests have a lower
 priority than captures, so a request submitted
@@ -71,7 +71,7 @@ configured will be captured as soon as the current repeat (burst)
 capture completes.</p>
 
 <p>After processing a request, the camera device will produce a {@link
-android.hardware.photography.CaptureResult} object, which contains
+android.hardware.camera2.CaptureResult} object, which contains
 information about the state of the camera device at time of capture,
 and the final settings used. These may vary somewhat from the request,
 if rounding or resolving contradictory parameters was necessary. The
